Add an incubator/playground module for toknroll.